[gd_scene load_steps=24 format=3 uid="uid://bitrs5euj3gu6"]

[ext_resource type="Script" path="res://bumblebee.gd" id="1_f10bi"]
[ext_resource type="Texture2D" uid="uid://cgx5celc7w0wu" path="res://assets/black_screen.png" id="1_jw2kx"]
[ext_resource type="Texture2D" uid="uid://cdbektym4wupo" path="res://assets/white_phone_screen.png" id="2_dxbra"]
[ext_resource type="Texture2D" uid="uid://c6vetj2y42k5f" path="res://assets/og_bee.png" id="3_acdm8"]
[ext_resource type="PackedScene" uid="uid://bm2jcr6gw03rx" path="res://flowers.tscn" id="4_oq5rx"]
[ext_resource type="Texture2D" uid="uid://c17y0nxrvj2wk" path="res://assets/bee_bg.png" id="4_wqx24"]
[ext_resource type="Texture2D" uid="uid://dld0fddfi7klb" path="res://assets/rec/rec_button_0.png" id="5_ra3kk"]
[ext_resource type="Texture2D" uid="uid://c5ncsgxepjs36" path="res://assets/rec/rec_button_1.png" id="6_jmd4x"]
[ext_resource type="Texture2D" uid="uid://3rxwiyy8tg4u" path="res://assets/rec/rec_button_2.png" id="7_q1i35"]
[ext_resource type="Texture2D" uid="uid://ch8jsvquhmnff" path="res://assets/rec/rec_button_3.png" id="8_ysusf"]
[ext_resource type="Texture2D" uid="uid://dfgsomh88il85" path="res://assets/rec/rec_button_4.png" id="9_6pxp8"]
[ext_resource type="Texture2D" uid="uid://bis52vy8flgg0" path="res://assets/rec/rec_button_5.png" id="10_ry73w"]
[ext_resource type="Texture2D" uid="uid://b6a6naxdl06c7" path="res://assets/rec/rec_button_6.png" id="11_f0ots"]
[ext_resource type="Texture2D" uid="uid://ds58d26trm7fl" path="res://assets/phone_frame.png" id="13_6arry"]
[ext_resource type="Texture2D" uid="uid://bj13o2bkqak33" path="res://assets/sign.png" id="15_8mk3m"]
[ext_resource type="Texture2D" uid="uid://b27at6m2hp1qu" path="res://assets/battery.png" id="16_uxghm"]
[ext_resource type="Texture2D" uid="uid://erdcdspvyjc2" path="res://assets/battery_bar.png" id="17_5o1l2"]
[ext_resource type="Script" path="res://battery_life.gd" id="18_8dvg8"]
[ext_resource type="Texture2D" uid="uid://3kcaqx4t3rdn" path="res://assets/service_bar.png" id="19_puapg"]
[ext_resource type="Script" path="res://instructions.gd" id="20_0ebww"]
[ext_resource type="PackedScene" uid="uid://dl6go1tewgek7" path="res://pause.tscn" id="21_2ldcm"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sswgr"]
radius = 62.0
height = 164.0

[sub_resource type="SpriteFrames" id="SpriteFrames_v7iqm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_ra3kk")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_ra3kk")
}, {
"duration": 1.0,
"texture": ExtResource("6_jmd4x")
}, {
"duration": 1.0,
"texture": ExtResource("7_q1i35")
}, {
"duration": 1.0,
"texture": ExtResource("8_ysusf")
}, {
"duration": 1.0,
"texture": ExtResource("9_6pxp8")
}, {
"duration": 1.0,
"texture": ExtResource("10_ry73w")
}, {
"duration": 1.0,
"texture": ExtResource("11_f0ots")
}],
"loop": false,
"name": &"Record",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_f0ots")
}, {
"duration": 1.0,
"texture": ExtResource("10_ry73w")
}, {
"duration": 1.0,
"texture": ExtResource("9_6pxp8")
}, {
"duration": 1.0,
"texture": ExtResource("8_ysusf")
}, {
"duration": 1.0,
"texture": ExtResource("7_q1i35")
}, {
"duration": 1.0,
"texture": ExtResource("6_jmd4x")
}, {
"duration": 1.0,
"texture": ExtResource("5_ra3kk")
}],
"loop": false,
"name": &"Stop",
"speed": 24.0
}]

[node name="bumblebee" type="Node2D"]
script = ExtResource("1_f10bi")

[node name="black_screen" type="Sprite2D" parent="."]
position = Vector2(947, 537)
scale = Vector2(1.04688, 1.06296)
texture = ExtResource("1_jw2kx")
metadata/_edit_lock_ = true

[node name="white_phone_screen" type="Sprite2D" parent="."]
position = Vector2(960, 540)
rotation = 1.5708
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_dxbra")
metadata/_edit_lock_ = true

[node name="bee_bg" type="Sprite2D" parent="."]
position = Vector2(1253, 290)
scale = Vector2(1.89216, 1.89216)
texture = ExtResource("4_wqx24")

[node name="og_bee" type="Sprite2D" parent="."]
position = Vector2(879, 342)
texture = ExtResource("3_acdm8")

[node name="sign" type="Sprite2D" parent="og_bee"]
position = Vector2(-1, 70)
rotation = -0.0349066
scale = Vector2(0.4325, 0.4325)
texture = ExtResource("15_8mk3m")

[node name="detection" type="Area2D" parent="og_bee"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="og_bee/detection"]
position = Vector2(-2, -3)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_sswgr")

[node name="flowers" parent="." instance=ExtResource("4_oq5rx")]
position = Vector2(1190, 904)

[node name="rect" type="Sprite2D" parent="."]
position = Vector2(969, 1418)
texture = ExtResource("1_jw2kx")

[node name="rec" type="AnimatedSprite2D" parent="."]
position = Vector2(962, 967)
sprite_frames = SubResource("SpriteFrames_v7iqm")
animation = &"Stop"

[node name="instructions" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 647.0
offset_top = 470.0
offset_right = 1216.0
offset_bottom = 603.0
script = ExtResource("20_0ebww")

[node name="text" type="Label" parent="instructions"]
layout_mode = 0
offset_left = 58.0
offset_top = 43.0
offset_right = 541.0
offset_bottom = 88.0
theme_override_font_sizes/font_size = 30
text = "Wait until someone's watching!"

[node name="timer_1" type="Timer" parent="."]
wait_time = 3.0

[node name="timer_2" type="Timer" parent="."]
wait_time = 5.0

[node name="left_black_screen" type="Sprite2D" parent="."]
position = Vector2(-405, 516)
scale = Vector2(1, 1.18333)
texture = ExtResource("1_jw2kx")

[node name="right_black_screen" type="Sprite2D" parent="."]
position = Vector2(2325, 568.5)
scale = Vector2(1, 1.16019)
texture = ExtResource("1_jw2kx")

[node name="frame" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("13_6arry")

[node name="battery_group" type="Node" parent="."]

[node name="battery" type="Sprite2D" parent="battery_group"]
position = Vector2(1268, 63)
scale = Vector2(0.2, 0.2)
texture = ExtResource("16_uxghm")

[node name="battery_life" type="TextureProgressBar" parent="battery_group/battery"]
offset_left = -200.0
offset_top = -101.0
offset_right = 200.0
offset_bottom = 99.0
max_value = 15.0
value = 15.0
texture_progress = ExtResource("17_5o1l2")
tint_under = Color(1, 1, 1, 0)
tint_over = Color(1, 1, 1, 0)
script = ExtResource("18_8dvg8")

[node name="service_bar" type="Sprite2D" parent="battery_group"]
position = Vector2(1172, 64)
scale = Vector2(0.2, 0.2)
texture = ExtResource("19_puapg")

[node name="5G" type="Label" parent="battery_group"]
offset_left = 1194.0
offset_top = 39.0
offset_right = 1233.0
offset_bottom = 84.0
theme_override_font_sizes/font_size = 30
text = "5G"
horizontal_alignment = 1
vertical_alignment = 1

[node name="pause" parent="." instance=ExtResource("21_2ldcm")]

[connection signal="body_entered" from="og_bee/detection" to="." method="_on_detection_body_entered"]
[connection signal="timeout" from="timer_1" to="." method="_on_timer_1_timeout"]
[connection signal="timeout" from="timer_2" to="." method="_on_timer_2_timeout"]
